--- a/src/app/pages/diary/components/weight/components/weight-statistic/weight-statistic.component.html
+++ b/src/app/pages/diary/components/weight/components/weight-statistic/weight-statistic.component.html
@@ -1,6 +1,6 @@
 <div class="weight-statistic">
   <div class="weight-statistic-new-item">
-    <button mat-fab color="primary" (click)="newWeightAction()">
+    <button mat-fab color="primary" (click)="newItemAction()">
       <fa-icon icon="plus"></fa-icon>
     </button>
   </div>
@@ -39,7 +39,7 @@
         </div>
       </div>
     </div>
-    
+
     <div class="weight-statistic-header">
       <div class="weight-statistic-header_row">
         <div class="weight-statistic-header_item">
