--- a/src/app/pages/diary/components/blood-pressure/components/blood-pressure-research/blood-pressure-research.component.scss
+++ b/src/app/pages/diary/components/blood-pressure/components/blood-pressure-research/blood-pressure-research.component.scss
@@ -1,51 +1,101 @@
 .blood-pressure-research {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  width: 100%;
   height: 100%;
-  padding: 10px;
+  position: relative;
 
-  &-header {
-    min-height: 60px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    align-content: center;
+  &-new-item {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    z-index: 99;
 
-    &_initial {
-      text-align: center;
+    button {
+      background: #B71C1C;
     }
+  }
 
-    &_current {
-      text-align: center;
-      .color-blue {
-        color: dodgerblue;
+  &_content {
+
+    &-pulse {
+      background: #FFFFFF;
+      box-shadow: 0px 1px 4px rgba(255, 194, 105, 0.3);
+      border-radius: 8px;
+      padding: 20px 12px;
+      margin: 16px;
+
+      &-header {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 10px;
+
+        &-title {
+          font-size: 18px;
+          color: rgba(113, 79, 79, 0.88);
+
+          span {
+            font-size: 14px;
+          }
+        }
+
+        &-value {
+          color: #FFC269;
+          font-size: 18px;
+          font-weight: bold;
+        }
       }
     }
 
-    &_target {
-      text-align: center;
+    &-pressure {
+      background: #FFFFFF;
+      box-shadow: 0px 1px 4px rgba(255, 194, 105, 0.3);
+      border-radius: 8px;
+      padding: 20px 12px;
+      margin: 16px;
+
+      &-header {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 10px;
+
+        &-title {
+          font-size: 18px;
+          color: rgba(113, 79, 79, 0.88);
+
+          span {
+            font-size: 14px;
+          }
+        }
+
+        &-value {
+          color: #FFC269;
+          font-size: 18px;
+          font-weight: bold;
+        }
+      }
     }
-  }
+    &-empty {
+      display: flex;
+      align-items: center;
+      padding-top: 50px;
+      width: 100%;
+      height: 100%;
+      flex-direction: column;
 
-  &-content {
-    min-height: 220px;
-  }
-  &-footer {
-    min-height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    align-content: center;
+      &-button {
+        margin: 20px 0;
 
-    &_changes {
-      text-align: center;
-    }
-
-    &_stock {
-      text-align: center;
+        button {
+          width: 270px;
+          height: 32px;
+          background: linear-gradient(0deg, rgba(255, 243, 224, 0.8), rgba(255, 243, 224, 0.8)), #FFFFFF;
+          /* Toolbars/text/red */
+          color: rgba(113, 79, 79, 0.74);
+          font-size: 12px;
+          border: 1px solid #B71C1C;
+          box-sizing: border-box;
+          border-radius: 28px;
+        }
+      }
     }
   }
 }
