--- a/src/app/shared/components/input-time/input-time.component.html
+++ b/src/app/shared/components/input-time/input-time.component.html
@@ -1,5 +1,5 @@
 <mat-form-field appearance="outline" class="{{ class }}">
     <mat-label *ngIf="label">{{ label }}</mat-label>
-    <input matInput placeholder="{{ placeholder }}" atp-time-picker [formControl]="timeControl">
+    <input matInput placeholder="{{ placeholder }}" atp-time-picker [formControl]="control">
     <fa-icon matSuffix icon="clock"></fa-icon>
 </mat-form-field>
