feat: migration pills to new implementation

--- a/src/app/pages/diary/components/urine/components/urine-item-dialog/urine-item-dialog.component.html
+++ b/src/app/pages/diary/components/urine/components/urine-item-dialog/urine-item-dialog.component.html
@@ -11,7 +11,7 @@
       </div>
 
       <div class="urine-item-dialog-content_form-field">
-        <app-input-time [timeControl]="timeControl"></app-input-time>
+        <app-input-time [control]="timeControl"></app-input-time>
       </div>
 
       <div class="urine-item-dialog-content_form-field">
