--- a/src/app/pages/pills/components/pills-research/pills-research.component.html
+++ b/src/app/pages/pills/components/pills-research/pills-research.component.html
@@ -1,7 +1,7 @@
 <ion-content [fullscreen]="true">
   <div class="pills-research">
     <div *ngIf="pillsList.length === 0" class="pills-research-no-items">
-      <img src="assets/icon/medication.png"/>
+      <img src="assets/icon/pills-empty-background.png"/>
       <div class="pills-research-no-items_footer">
         <button class="pills-research-no-items_button" (click)="clickByAddButtonAction()">Добавить первое лекарство</button>
       </div>
@@ -30,3 +30,4 @@
     </div>
   </div>
 </ion-content>
+
